[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "1.0.0"
description = "Trading Bot for Telegram Signals"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "pandas>=1.5.3",
    "numpy>=1.24.3",
    "requests>=2.28.2",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "ta>=0.10.2",
    "python-telegram-bot>=13.15"
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
